--- a/cv_page2.html
+++ b/cv_page2.html
@@ -17,6 +17,5 @@
         <p><strong>Course:</strong>Leaving Certificate</p>
         <p><strong>Year:</strong>2010-2017</p>
         
-        <a href="cv_page3.html">Next</a>
-    </body>
+        <a href="cv_page3.html" class="btn btn-dark">Next</a>
 </html>
