--- a/cv_page3.html
+++ b/cv_page3.html
@@ -12,6 +12,6 @@
         <p><strong>Year:</strong>2017-Present</p>
         
         
-        <a href="homepage.html">Home</a>
+        <a href="homepage.html" class="btn btn-success">Home</a>
     </body>
 </html>
