--- a/homepage.html
+++ b/homepage.html
@@ -13,9 +13,9 @@
       <!--Creating a sidebar-->  
         <div id="sidebar">
             <ul>
-                <li><a href="cv_page1.html"></a>Curriculum Vitae</li>
-                <li><a href="interests/sports.html"></a>Interests</li>
-                <li><a href="ebusiness/Ebus1.php"></a>Ebus1</li>
+                <li><a href="cv_page1.html">Curriculum Vitae</a></li>
+                <li><a href="interests/sports.html">Interests</a></li>
+                <li><a href="ebusiness/Ebus1.php">Ebus1</a></li>
                 
             </ul>
         </div>
