--- a/cv_page1.html
+++ b/cv_page1.html
@@ -46,8 +46,8 @@
           </div>
 
       <div class="footer">
-            <a href="cv_page1.html" class="btn btn-success">Next</a> 
-            <a href="cv_page1.html" class="back">
+            <a href="cv_page2.html" class="btn btn-success">Next</a> 
+            <a href="homepage.html" class="back">
           <img src= "images/back.png" height=75 width=75></a>
       </div>
  
