--- a/cv_page3.html
+++ b/cv_page3.html
@@ -12,6 +12,13 @@
 
       </head>
     <body>
+      <div class="navbar">
+        <a href="homepage.html">Homepage</a>
+        <a href="cv_page1.html">CV</a>
+        <a href="interests/sports.html">Interests</a>
+      </div>
+     
+     
      <div class="header">
         <a href="homepage.html"> <img src="images/home.png" width=50 height=50 class="home"></a>
         <h3 class ="mainheading"> Work Experience</h3> 
