fixing links on homepage/int menu

--- a/homepage.html
+++ b/homepage.html
@@ -41,7 +41,7 @@
    
         </a>
        
-       <a href="interests/sports.html">
+       <a href="interests/interests-menu.html">
        <img id="interests" src="https://image.flaticon.com/icons/svg/185/185590.svg" width=20% height=20%>
        </a>
        
