--- a/cv_page3.html
+++ b/cv_page3.html
@@ -15,7 +15,7 @@
       <div class="navbar">
         <a href="homepage.html">Homepage</a>
         <a href="cv_page1.html">CV</a>
-        <a href="interests/sports.html">Interests</a>
+        <a href="interests/interests-menu.html">Interests</a>
       </div>
      
      
