--- a/cv_page1.html
+++ b/cv_page1.html
@@ -4,6 +4,7 @@
         <title>Personal</title>
         <link rel="stylesheet" href="cv_1.css" type="text/css">
         <link href="https://fonts.googleapis.com/css?family=Leckerli+One" rel="stylesheet">
+        <meta charset= "utf-8">
         
       <!--Adding Bootstrap-->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
