--- a/cv_page3.html
+++ b/cv_page3.html
@@ -57,9 +57,9 @@
                             
                  <div class="footer">
                   
-                <a href="interests/interests-menu.html" class="btn btn-success">Next</a>
+                  <a href="interests/interests-menu.html" class="btn btn-success">Next</a>
                   <a href="cv_page2.html" class="back">
-          <img src= "images/back.png" height=75 width=75></a>
+                  <img src= "images/back.png" alt="back" height=75 width=75></a>
                  </div>           
 
     </body>
