--- a/ebusiness/skysales.html
+++ b/ebusiness/skysales.html
@@ -14,7 +14,7 @@
          
                <li><a href="../homepage.html">Homepage</a></li>
                <li><a href="../cv_page1.html">CV</a></li>
-               <li><a href="../ interests/interests-menu.html">Interests</a></li>
+               <li><a href="../interests/interests-menu.html">Interests</a></li>
                <li><a href="skysales.html">Sky Sales</a></li>
                <li><a href="info.html">About Cloud</a></li>
                <li><a href="Ebus1.php">Products</a></li>
