--- a/interests/interests-menu.html
+++ b/interests/interests-menu.html
@@ -1,6 +1,7 @@
+<!DOCTYPE html>
 <html>
     <head>
-        <title>Sports</title>
+        <title>Interests Menu</title>
         <link rel="stylesheet" href="menu.css" type="text/css"/>
         <link rel="stylesheet" href="int_pages.css" type="text/css"/>
         <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
