--- a/cv_page3.html
+++ b/cv_page3.html
@@ -4,6 +4,10 @@
         <title>Work</title>
         <link rel="stylesheet" href="cv_3.css" type="text/css">
         <link href="https://fonts.googleapis.com/css?family=Leckerli+One" rel="stylesheet">
+         <link rel="icon" href="https://www.cubsucc.com/contentFiles/staffProfileImages/CUBSLogoColCMYK16.png">
+         <meta charset= "utf-8">
+         <html lang =“en-US”>
+        
         
               <!--Adding Bootstrap-->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
