--- a/cv_page1.html
+++ b/cv_page1.html
@@ -4,8 +4,10 @@
         <title>Personal</title>
         <link rel="stylesheet" href="cv_1.css" type="text/css">
         <link href="https://fonts.googleapis.com/css?family=Leckerli+One" rel="stylesheet">
-        <meta charset= "utf-8">
-        
+         <link rel="icon" href="https://www.cubsucc.com/contentFiles/staffProfileImages/CUBSLogoColCMYK16.png">
+         <meta charset= "utf-8">
+        <html lang =“en-US”>
+            
       <!--Adding Bootstrap-->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
