--- a/homepage.html
+++ b/homepage.html
@@ -5,7 +5,8 @@
         <link rel="stylesheet" href="mystylesheet.css" type = "text/css">
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
        <link href="https://fonts.googleapis.com/css?family=Leckerli+One" rel="stylesheet">
-       
+        <link rel="icon" href="https://www.cubsucc.com/contentFiles/staffProfileImages/CUBSLogoColCMYK16.png">
+          <meta charset= "utf-8">
 
     
 
