--- a/interests/interests-menu.html
+++ b/interests/interests-menu.html
@@ -6,6 +6,10 @@
         <link rel="stylesheet" href="int_pages.css" type="text/css"/>
         <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Leckerli+One" rel="stylesheet">
+         <link rel="icon" href="https://www.cubsucc.com/contentFiles/staffProfileImages/CUBSLogoColCMYK16.png">
+        <meta charset= "utf-8">
+        <html lang =“en-US”>
+        
         
          <!--Adding Bootstrap-->
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
