error fixing, setting language

--- a/interests/interests-menu.html
+++ b/interests/interests-menu.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>Interests Menu</title>
         <link rel="stylesheet" href="menu.css" type="text/css"/>
