--- a/interests/sports.html
+++ b/interests/sports.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>Sports</title>
         <link rel="stylesheet" href="../mystlesheet.css" type="text/css"/>
