--- a/interests/cloud_services.html
+++ b/interests/cloud_services.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <title>Cloud Services</title>
          <link rel="stylesheet" href="cloud.css" type="text/css"/>
