second last edit

--- a/cv_page2.html
+++ b/cv_page2.html
@@ -17,6 +17,7 @@
     </head>
   
     <body>
+        <!--creating a nav bar-->
           <ul>
          
                <li><a href="homepage.html">Homepage</a></li>
