--- a/homepage.html
+++ b/homepage.html
@@ -18,6 +18,7 @@
     
     <ul>
   <li><a href="homepage.html">Home</a></li>
+ <!--creating a nav bar-->
  
   <li class="dropdown">
     <a href="javascript:void(0)" class="dropbtn">CV</a>
